fixed image stretching on grid

--- a/about.css
+++ b/about.css
@@ -352,6 +352,11 @@ img {
   width: 100%;
 }
 
+.imageBox img {
+  object-fit: cover;
+
+}
+
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 0.5px solid rgba(0, 0, 0, 0.8);
